# jni_zero

./: CMakeLists.txt  core.cc  core.h  jni_export.h  jni_generator.py  jni_registration_generator.py  jni_zero_helper.h  logging.cc  logging.h  scoped_java_ref.cc  scoped_java_ref.h
samples/java/src/org/jni_zero/samples/: SampleForTests.java
